--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "eslint": "^8.27.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
