--- a/client/package.json
+++ b/client/package.json
@@ -43,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy":"https://c8e8-221-140-177-247.jp.ngrok.io"
 }
