--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
       "browser": true,
-      "es2021": true
+      "es2021": true,
+      "node": true
     },
     "extends": [
       "eslint:recommended",
@@ -15,11 +16,15 @@
         "jsx": true
       },
       "ecmaVersion": "latest",
-      "sourceType": "module"
+      "sourceType": "module",
+      "parser": "babel-eslint"
     },
     "rules": {
       "react/react-in-jsx-scope": 0,
       "react/jsx-uses-react": 0,
-      "react/prop-types": "off"
+      "react/prop-types": "off",
+      // "comma-dangle": "off"
+      "comma-dangle": ["error", "never"],
+      "import/no-named-as-default": 0
     }
   }
