✨ Feat: useInterval로 주문 알람 요청

--- a/client/package.json
+++ b/client/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"https://c8e8-221-140-177-247.jp.ngrok.io"
+  "proxy":"https://137c-221-140-177-247.jp.ngrok.io"
 }
