--- a/server/demo/src/main/resources/application.yml
+++ b/server/demo/src/main/resources/application.yml
@@ -41,7 +41,7 @@ spring:
         driver-class-name: com.mysql.cj.jdbc.Driver
         url: jdbc:mysql://localhost:3306/mainproject?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
         username: root
-        password: yourPassword
+        password: ${MYSQL_PASSWORD}
 
     security:
         jwt:
