--- a/client/package.json
+++ b/client/package.json
@@ -63,5 +63,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0"
-  }
+  },
+  "proxy":"https://7b43-221-140-177-247.jp.ngrok.io"
 }
