--- a/server/demo/src/main/resources/application.yml
+++ b/server/demo/src/main/resources/application.yml
@@ -52,7 +52,7 @@ spring:
 
     jpa:
         database: mysql
-        database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+#        database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
         generate-ddl: true
         hibernate:
             ddl-auto: update
