💄 Style:qr table css 수정

--- a/client/package.json
+++ b/client/package.json
@@ -64,5 +64,5 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0"
   },
-  "proxy":"https://d033-221-140-177-247.jp.ngrok.io"
+  "proxy":"https://df2a-118-103-212-116.jp.ngrok.io"
 }
